...
    <Animated.View
      style={[styles.pill, {
        transitionProperty: 'opacity',
        transitionDuration: '300ms',
        opacity: visible ? 1 : 0,
      }]}
      testID="status-notification-banner"
    >
      <Text style={[styles.text, { color: config.textColor }]}>
        {displayText}
      </Text>
    </Animated.View>
  );
...
